# ServerTCP

./: .gitignore  CMakeLists.txt  generate_structure.sh  project_structure.txt
Client/: CMakeLists.txt
Client/Client/: CMakeLists.txt  Client.cpp  Client.h
Networking/: CMakeLists.txt
Networking/include/Networking/: Base.h  TcpConnection.h  TcpServer.h
Networking/include/Networking/client/: TcpClient.h
Networking/include/Networking/server/: TcpConnection.h  TcpServer.h
Networking/src/: Base.cpp  TcpConnection.cpp  TcpServer.cpp
Networking/src/client/: TcpClient.cpp
Networking/src/server/: TcpConnection.cpp  TcpServer.cpp
ServerTcp/: CMakeLists.txt
ServerTcp/ServerTcp/: CMakeLists.txt  ServerTcp.cpp  ServerTcp.h
